--- a/app/src/main/res/layout/fragment_add_discount_card.xml
+++ b/app/src/main/res/layout/fragment_add_discount_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="4dp"
-    tools:context=".AddDiscountCardFragment">
+    tools:context=".fragments.addDiscountCard.AddDiscountCardFragment">
 
 
     <com.google.android.material.textfield.TextInputLayout
