--- a/app/src/main/res/layout/fragment_bank_card.xml
+++ b/app/src/main/res/layout/fragment_bank_card.xml
@@ -6,14 +6,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp"
         tools:context=".fragments.bankCard.BankCardFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/discountCardRecyclerView"
+            android:id="@+id/bankCardRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            tools:listitem="@layout/row_discount_card"
+            tools:listitem="@layout/row_bank_card"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No data here"
-            android:visibility="visible"
+            android:visibility="invisible"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
